@@ -106,7 +106,7 @@ class TTrIn: public TTransportIn
 	unsigned mMdmDataMode	:1;
 	unsigned mRTSfc		:1;
 	unsigned mRTSlvl	:1;
-	unsigned mEchofl	:1;
+	unsigned mRTSEcho	:1;
 };
 
 //************************************************
@@ -193,7 +193,8 @@ class TTrOut: public TTransportOut
 	unsigned mMdmDataMode	:1;
 	unsigned mRTSfc		:1;		//Flow control by RTS signal for pure RS-485
 	unsigned mRTSlvl	:1;
-	unsigned mEchofl	:1;
+	unsigned mRTSEcho	:1;
+	unsigned mI2C		:1;
 };
 
 //************************************************
